[package]
name = "radxpy"
version = "0.0.1"
authors = ["Rudolf Kolbe <rkolbe96@gmail.com>"]
edition = "2018"

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
radx = { git = "https://github.com/Isaac-Lozano/radx" }
hound = "3.3.0"

[lib]
name = "radxpy"
crate-type = ["cdylib"]
